# vortex-cli

./: .gitignore  Cargo.toml  README.md
examples/: array_encoding.rs
src/: main.rs
